# IBEX-LLM

./: .gitignore  LICENSE  README.md  constructDataset.py  examples.json  finetune.py  handler.py  handlerNoGPT.py  instructionReader.py  outputBefore.txt  serverOutputWithActions.txt  serverStarter.sh  userentry.tex
config/: current_output.txt  db.sql  initial_prompt.txt
futurchy/: GameHandlerFutarchy.py  instructions.md  start.sh
harberger/: game.json
instructions/: 2024-02-14, Instructions voting V2.docx  2024-02-15, Instructions Harberger_V4.docx  2024-02-20, Instructions Futarchy_V5.docx  Instructions voting_11_25_md_rvb-SR15-12.docx  Instructions_Harberger_rvb_nov_23_SR15-12.docx  Instructions_futarchy_19_dec_SR_rvb_20dec final check.docx  ~$al of LLM Project.docx
jsonFiles/: 223.log.json  240.log-2.json
output/: agent1.txt  agent2.txt  agent3.txt
prompts/: button_prompt.txt  initial_prompt.txt  input_prompt.txt
scripts/: gameInitiliser.sh  killer.sh  mermaidScript.sh  serverStarter.sh
src/: AuctionTest.py  (+18 more)
src/harberger/: .env  GameHandlerHarberger.py  HarbergerTest.py  HarbergerTestExtreme.py  Harberger_Instructions.md  LLMCommunicator.py  POST.txt  WebSocketClient.py  __init__.py  instructions.md  prompt_downloader.py  pyproject.toml  toggle_server.sh
src/harberger/output/: agent1.txt  agent10.txt  agent11.txt  agent12.txt  agent2.txt  agent3.txt  agent4.txt  agent5.txt  agent6.txt  agent7.txt  agent8.txt  agent9.txt
src/harberger/prompts/: game_metadata.xlsx  phase_descriptions.xlsx  role_descriptions.xlsx  role_phase_instructions.xlsx
(+60 files in other folders)
